package app.com.server.enums;

public enum ParcelType {
    DOCUMENT,
    BOX,
    ENVELOPE,
    PALLET,
    CRATE,
    OTHER
} 