package app.com.server.enums;

public enum TripRequestStatus {
    PENDING,
    ACCEPTED,
    REJECTED,
    CANCELLED,
} 