@startuml Linkup_diagramm_class
class User {
    -id: UUID
    -username: String
    -firstName: String
    -lastName: String
    -email: String
    -password: String
}

class Admin {
 
}

class Sender {
   
}

class Driver {

}

class Trip {
    -id: UUID
    -departure: String
    -arrival: String
    -parcelType: ParcelType
}

class TripStops {
    -id: UUID
    -stop: String
}

class TripRequest {
    -id: UUID
    -status: TripRequestStatus
}

class Parcel {
    -id: UUID
    -width: double
    -height: double
    -weight: double
    -type: ParcelType

}


enum ParcelType {

}

enum TripRequestStatus {

}


User <|-- Admin
User <|-- Driver
User <|-- Sender

Admin "1" -left--> "1..*" Driver : "manage"
Admin "1" -right--> "1..*" Sender : "manage"
Admin "1" -- "0..*" Trip : "manage"

Sender "1 " --> "0..* " TripRequest: "send & cancel"

Driver "1" --> "0..*" Trip : "manage"


Trip "1" -- "1..*" Parcel : "has"
Trip "1" -right-- "0..*" TripRequest : "has"
TripStops "0..*" -right--* "1" Trip : "has"
TripRequest "1" -- "1..*" Parcel : "has"



@enduml